<resources>
    <string-array name="activity_type_array">
        <item>Work</item>
        <item>Study</item>
        <item>Leisure</item>
        <item>Sport</item>
    </string-array>
    <string name="app_name">TheDiary</string>
    <string name="diary_title_hint">Enter a title for the diary entry</string>
    <string name="diary_title_label">Title</string>
    <string name="diary_comment_hint">Comment</string>
    <string name="diary_comment_label"> Comment: </string>
    <string name="new_diary">Log</string>
    <string name="user_settings">Settings</string>
    <string name="date_picker_title">Date of diary</string>
    <string name="show_settings">Settings</string>
    <string name="diary_type">Choose a diary type</string>
    <string name="diary_type_label">Type</string>
    <string name="diary_duration_label">Duration</string>
    <string name="diary_duration_hint"> Enter the duration </string>
    <string name="action_settings">Settings</string>
    <string name="diary_details_label">Details</string>
    <string name="save_button"> Save </string>
    <string name="cancel_button"> Cancel </string>
    <string name="delete_button"> Delete </string>
    <string name="diary_place_hint">place of the activity</string>
    <string name="diary_place_label"> activity place: </string>


    <string name="settings_id_label">ID</string>
    <string name="settings_id_hint">Enter your ID.</string>
    <string name="settings_name_label">Name</string>
    <string name="settings_email_label">Email</string>
    <string name="settings_gender_label">Gender</string>
    <string name="settings_comment_hint">Enter your comments here.</string>
    <string name="settings_name_hint">Enter your name.</string>
    <string name="settings_email_hint">Enter an email.</string>


    <string-array name="activity_type_list">
        <item>Work</item>
        <item>Personal</item>
        <item>Commute</item>
    </string-array>s
    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
