<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:weightSum="1">
    <include layout="@layout/diary_view" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_duration_label"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <EditText
        android:id="@+id/diary_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/diary_duration_hint"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_comment_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <EditText
        android:id="@+id/diary_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/diary_comment_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_place_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <EditText
        android:id="@+id/diary_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/diary_place_hint"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:text="@string/diary_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_type_label_id"
            android:layout_weight="0.63"
            style="?android:listSeparatorTextViewStyle"/>

        <Spinner
            android:id="@+id/activity_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/activity_type_label_id"
            android:layout_weight="0.51"></Spinner>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="2.19"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"/>

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"/>
    </LinearLayout>
</LinearLayout>